# cosmic-calculator

./: Cargo.toml  Justfile  README.md  com.cosmic.calculator.yml
src/: main.rs
